--- a/Paulls/sembuketov.html
+++ b/Paulls/sembuketov.html
@@ -30,6 +30,85 @@
 			</div>
 		</div>
 	</div>
+	<!--! Main content -->
+	<main class="case-content">
+		<div class="container">
+			<h2 class="case-content__title">О кейсе</h2>
+			<br>
+			<p>«Семь Букетов» - цветочный бутик люкс-категории из Москвы. В 2020 году компания решила расширить свой ecommerce-сегмент с Instagram-аккаунта до интернет-магазина и обратилась в наше бюро. От нас требовалось разработать отдельную визуальную философию и наладить бизнес-процессы.</p>
+			<br>
+			<p>От нас требовалось разработать отдельную визуальную философию и наладить бизнес-процессы.</p>
+			<br>
+			<br>
+			<br>
+			<br>
+			<!-- Quote block -->
+			<hr>
+			<br>
+			<div class="quote-block">
+				<strong>Идеальные цветы продают себя сами, поэтому мы решили создать не просто сайт, а магазин-галерею, где каждый товар - произведение искусства.</strong>
+			</div>
+			<br>
+			<hr>
+			<!--/ Quote block -->
+			<br>
+			<br>
+			<br>
+			<!-- Card block -->
+			<div class="case-content__card-block">
+				<div class="text">
+					<p>Уже на главной странице мы видим обилие цветочных экспозиций, отсылающих нас к стилю картинной галереи. Клиент уже может увидеть преимущество любой композиции и выбрать то, что подойдёт лично ему.</p>
+				</div>
+				<img src="img/roses.png" alt="Розы">
+			</div>
+			<br>
+			<br>
+			<br>
+			<!-- Quote block -->
+			<hr>
+			<br>
+			<div class="quote-block">
+				<strong>Каждый букет собирается индивидуально, поэтому при создании карточек товаров мы решили сосредоточиться на общей информации и фотографиях, способных рассказать о цветах лучше любых слов.</strong>
+			</div>
+			<br>
+			<hr>
+			<!--/ Quote block -->
+			<br>
+			<br>
+			<br>
+			<img class="img-fluid" src="img/roses-full.png" alt="Розы">
+			<br>
+			<br>
+			<br>
+			<!-- Quote block -->
+			<hr>
+			<br>
+			<div class="quote-block">
+				<strong>В этом бизнесе очень важны личные пожелания клиента, поэтому на сайте имеется большое количество форм для передачи индивидуальных заказов.</strong>
+			</div>
+			<br>
+			<hr>
+			<!--/ Quote block -->
+			<br>
+			<br>
+			<br>
+			<div class="img-container">
+				<img class="img-fluid" src="img/rose-forms.png" alt="Розы">
+			</div>
+			<br>
+			<br>
+			<br>
+			<p style="text-align: center">
+				Если же человек хочет получить конкретный букет по своим запросам из огромного количества букетов, созданных компанией, он может обратиться к разработанному нами чат-боту. Он подберёт хороший и красивый букет и расскажет о каждом.
+			</p>
+			<br>
+			<br>
+			<br>
+			<p style="text-align: center">
+				<strong><a href="http://sembuketov.com/">sembuketov.com</a></strong>
+			</p>
+		</div>
+	</main>
 	<script src="js/scripts.min.js"></script>
 </body>
 </html>
