--- a/Paulls/sembuketov.html
+++ b/Paulls/sembuketov.html
@@ -24,9 +24,9 @@
 	<div class="case-pagination">
 		<div class="container">
 			<div class="row justify-content-between">
-				<a href="#" class="case-pagination__prev case-pagination__link">НАЗАД</a>
+				<a href="index.html" class="case-pagination__prev case-pagination__link">НАЗАД</a>
 				<img src="img/rose.png" alt="Роза" class="absolute-img">
-				<a href="#" class="case-pagination__next case-pagination__link">ДАЛЕЕ</a>
+				<a href="matrice.html" class="case-pagination__next case-pagination__link">ДАЛЕЕ</a>
 			</div>
 		</div>
 	</div>
