--- a/Paulls/sembuketov.html
+++ b/Paulls/sembuketov.html
@@ -92,9 +92,7 @@
 			<br>
 			<br>
 			<br>
-			<div class="img-container">
-				<img class="img-fluid" src="img/rose-forms.png" alt="Розы">
-			</div>
+			<img class="img-full" src="img/rose-forms.png" alt="Розы">
 			<br>
 			<br>
 			<br>
