--- a/Paulls/matrice.html
+++ b/Paulls/matrice.html
@@ -15,7 +15,7 @@
 </head>
 <body class="case-page">
 	<!--! Case-header -->
-	<div class="case-header" style="background-image: url('img/case-header.png');">
+	<div class="case-header specific-bg" style="background-image: url('img/case-header2.png');">
 		<div class="case-header__title">
 			<h1>ЛАКОНИЧНАЯ ЭСТЕТИКА, ВЫРАЖЕННАЯ В КОСМЕТИКЕ</h1>
 		</div>
