--- a/Paulls/matrice.html
+++ b/Paulls/matrice.html
@@ -25,7 +25,7 @@
 		<div class="container">
 			<div class="row justify-content-between">
 				<a href="sembuketov.html" class="case-pagination__prev case-pagination__link">НАЗАД</a>
-				<a href="#" class="case-pagination__next case-pagination__link">ДАЛЕЕ</a>
+				<a href="niinm.html" class="case-pagination__next case-pagination__link">ДАЛЕЕ</a>
 			</div>
 		</div>
 	</div>
@@ -48,9 +48,7 @@
 			</div>
 			<br>
 			<!--/ Quote block -->
-			<div class="img-container">
-				<img class="img-fluid" src="img/shop-main.png" alt="Matrice">
-			</div>
+			<img class="img-full" src="img/shop-main.png" alt="Matrice">
 			<br>
 			<br>
 			<br>
