--- a/TTC/index.html
+++ b/TTC/index.html
@@ -46,7 +46,7 @@
 				            <li><a href="#">ПЛЕДЫ</a></li>
 				            <li><a href="#">ТКАНИ</a></li>
 				            <li><a href="#">ОДЕЯЛА</a></li>
-				            <li><a href="#">ПАРТНЕРЫ</a></li>
+				            <li><a href="partners.html">ПАРТНЕРЫ</a></li>
 				            <li><a href="#">О КОМПАНИИ</a></li>
 				            <li><a href="#">КОНТАКТЫ</a></li>
 				        </ul>
@@ -100,7 +100,7 @@
 				</div>
 			</div>
 			<!--! Assortment -->
-			<section class="assortment">
+			<section class="mxw-1150 assortment">
 				<!-- Section-title -->
 				<div class="section-title">
 					<h2>АССОРТИМЕНТ</h2>
@@ -140,7 +140,7 @@
 				</div>
 			</section>
 			<!--! Features -->
-			<section class="features">
+			<section class="mxw-1150 features">
 				<!-- Section-title -->
 				<div class="section-title">
 					<h2>ПОЧЕМУ МЫ?</h2>
@@ -276,7 +276,7 @@
 								<ul class="footer-column__links">
 									<li><a href="#">КОНТАКТЫ</a></li>
 									<li><a href="#">ИСТОРИЯ</a></li>
-									<li><a href="#">ПАРТНЕРЫ</a></li>
+									<li><a href="partners.html">ПАРТНЕРЫ</a></li>
 									<li><a href="#">ГЛАВНАЯ</a></li>
 								</ul>
 							</div>
