--- a/TTC/index.html
+++ b/TTC/index.html
@@ -47,7 +47,7 @@
 				            <li><a href="#">ТКАНИ</a></li>
 				            <li><a href="#">ОДЕЯЛА</a></li>
 				            <li><a href="partners.html">ПАРТНЕРЫ</a></li>
-				            <li><a href="#">О КОМПАНИИ</a></li>
+				            <li><a href="about.html">О КОМПАНИИ</a></li>
 				            <li><a href="#">КОНТАКТЫ</a></li>
 				        </ul>
 				    </nav>
