--- a/TTC/partners.html
+++ b/TTC/partners.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>КУПАВИНСКАЯ ТЕКСТИЛЬНАЯ КОМПАНИЯ</title>
+	<title>КУПАВИНСКАЯ ТЕКСТИЛЬНАЯ КОМПАНИЯ | Партнеры</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -47,7 +47,7 @@
 				            <li><a href="#">ТКАНИ</a></li>
 				            <li><a href="#">ОДЕЯЛА</a></li>
 				            <li class="current-page"><a href="#">ПАРТНЕРЫ</a></li>
-				            <li><a href="#">О КОМПАНИИ</a></li>
+				            <li><a href="about.html">О КОМПАНИИ</a></li>
 				            <li><a href="#">КОНТАКТЫ</a></li>
 				        </ul>
 				    </nav>
