--- a/TTC/about.html
+++ b/TTC/about.html
@@ -23,7 +23,7 @@
 		<header class="header static-header">
 			<div class="container">
 				<div class="header__body row justify-content-between align-items-center">
-					<a href="#" class="logo">
+					<a href="index.html" class="logo">
 						<img src="img/logo.png" alt="Лого">
 						<div class="logo__content">
 							<span class="logo__text1">КУПАВИНСКАЯ</span>
@@ -48,7 +48,7 @@
 				            <li><a href="#">ОДЕЯЛА</a></li>
 				            <li><a href="partners.html">ПАРТНЕРЫ</a></li>
 				            <li class="current-page"><a href="#">О КОМПАНИИ</a></li>
-				            <li><a href="#">КОНТАКТЫ</a></li>
+				            <li><a href="contact.html">КОНТАКТЫ</a></li>
 				        </ul>
 				    </nav>
 				</div>
@@ -58,7 +58,7 @@
 		<header class="header fixed-for-menu">
 			<div class="container">
 				<div class="header__body row justify-content-between align-items-center">
-					<a href="#" class="logo">
+					<a href="index.html" class="logo">
 						<img src="img/logo.png" alt="Лого">
 						<div class="logo__content">
 							<span class="logo__text1">КУПАВИНСКАЯ</span>
@@ -165,7 +165,7 @@
 							<div class="footer-column">
 								<h5 class="footer-column__title">ИНФОРМАЦИЯ</h5>
 								<ul class="footer-column__links">
-									<li><a href="#">КОНТАКТЫ</a></li>
+									<li><a href="contact.html">КОНТАКТЫ</a></li>
 									<li><a href="#">ИСТОРИЯ</a></li>
 									<li><a href="partners.html">ПАРТНЕРЫ</a></li>
 									<li><a href="#">ГЛАВНАЯ</a></li>
