--- a/TTC/contact.html
+++ b/TTC/contact.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>КУПАВИНСКАЯ ТЕКСТИЛЬНАЯ КОМПАНИЯ | Партнеры</title>
+	<title>КУПАВИНСКАЯ ТЕКСТИЛЬНАЯ КОМПАНИЯ | Контакты </title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -46,9 +46,9 @@
 				            <li><a href="#">ПЛЕДЫ</a></li>
 				            <li><a href="#">ТКАНИ</a></li>
 				            <li><a href="#">ОДЕЯЛА</a></li>
-				            <li class="current-page"><a href="#">ПАРТНЕРЫ</a></li>
+				            <li><a href="partners.html">ПАРТНЕРЫ</a></li>
 				            <li><a href="about.html">О КОМПАНИИ</a></li>
-				            <li><a href="contact.html">КОНТАКТЫ</a></li>
+				            <li class="current-page"><a href="#">КОНТАКТЫ</a></li>
 				        </ul>
 				    </nav>
 				</div>
@@ -79,38 +79,45 @@
 		</header>
 		<!-- Container -->
 		<div class="container">
-			<!--! Partners -->
-			<section class="partners mxw-1150">
+			<!--! About -->
+			<section class="contact mxw-1150">
 				<!-- Section-title -->
 				<div class="section-title">
-					<h2>ПАРТНЕРЫ</h2>
+					<h2>КОНТАКТЫ</h2>
 				</div>
 				<!-- Card -->
-				<div class="card">		
-					<img src="img/card11.png" class="card__img" alt="«Ермолино» логотип">
+				<div class="card right">		
+					<img src="img/card14.png" class="card__img" alt="«Ермолино» логотип">
 					<div class="card__content">
-						<p class="center-text">
-							<strong>ООО «Ермолино» — изделия из 100% хлопковой пряжи на рынок текстильной промышленности.</strong>
+						<p>
+							<strong>Секретарь:</strong>
 						</p>
+						<br>
+						<p>+79153255339</p>
+						<p>+74957029604</p>
+						<p>+74957029602</p>
+						<br>
+						<p><strong>Отдел продаж:</strong></p>
+						<br>
+						<p>+79153251201</p>
+						<p>+79153250021</p>
+						<br>
+						<p><strong>Коммерческий директор - Востриков Василий Дмитриевич</strong></p>
+						<br>
+						<p><b>Телефон:</b> +79161945719</p>
+						<p><b>E-mail:</b> info@kupavnatk.ru</p>
+						<br>
+						<p><b>График работы:</b> понедельник-пятница 08:00-16:30.</p>
+						<p><b>Перерыв</b> с 12.00 до 12.30.</p>
+						<p><b>Выходной:</b> суббота, воскресенье.</p>
+						<p><b>Наш адрес:</b> Московская обл., г. Старая Купавна, ул. Большая Московская, д. 3.</p>
 					</div>
 				</div>
-				<p class="section-text">Наши товары — это не только оригинальный дизайн и внимание к новейшим тенденциям моды, но и экологическая чистота изделий и отсутствие вредных примесей. Продукция «Ермолино» прошла проверку Роспотребнадзора и соответствует всем необходимым требованиям ГОСТ.
-				<br><br>
-				Официальный сайт: <a href="https://www.ermolino.ru">https://www.ermolino.ru</a></p>
-				<!-- Card -->
-				<div class="card">
-					<img src="img/card12.png" class="card__img" alt="ТКАНИ">
-					<div class="card__content">
-						<p class="center-text">
-							<strong>МТОК – Московская фабрика гобеленов</strong>
-						</p>
-					</div>
+				<br><br><br><br>
+				<!-- Map -->
+				<div class="map-container">
+					<div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/21656/staraja-kupavna/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Старая Купавна</a><a href="https://yandex.ru/maps/21656/staraja-kupavna/house/bolshaya_moskovskaya_ulitsa_3/Z0EYdwFkTEcGQFtvfXRxdn9mYA==/?ll=38.164950%2C55.807293&utm_medium=mapframe&utm_source=maps&z=19.48" style="color:#eee;font-size:12px;position:absolute;top:14px;">Большая Московская улица, 3 — Яндекс.Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCQ3ZBrSgA" width="560" height="500" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
 				</div>
-				<p class="section-text">
-					Московский ткацко-отделочный комбинат – это крупная российская фабрика по производству гобеленовых и жаккардовых тканей и готовых швейных изделий. 
-					<br><br>
-					Официальный сайт: <a href="https://www.gobelen-mtok.ru">https://www.gobelen-mtok.ru</a>
-				</p>
 			</section>
 			<!--! Feedback -->
 			<section class="feedback">
@@ -179,9 +186,9 @@
 							<div class="footer-column">
 								<h5 class="footer-column__title">ИНФОРМАЦИЯ</h5>
 								<ul class="footer-column__links">
-									<li><a href="contact.html">КОНТАКТЫ</a></li>
+									<li><a href="#">КОНТАКТЫ</a></li>
 									<li><a href="#">ИСТОРИЯ</a></li>
-									<li><a href="#">ПАРТНЕРЫ</a></li>
+									<li><a href="partners.html">ПАРТНЕРЫ</a></li>
 									<li><a href="#">ГЛАВНАЯ</a></li>
 								</ul>
 							</div>
