--- a/TTC/index.html
+++ b/TTC/index.html
@@ -48,7 +48,7 @@
 				            <li><a href="#">ОДЕЯЛА</a></li>
 				            <li><a href="partners.html">ПАРТНЕРЫ</a></li>
 				            <li><a href="about.html">О КОМПАНИИ</a></li>
-				            <li><a href="#">КОНТАКТЫ</a></li>
+				            <li><a href="contact.html">КОНТАКТЫ</a></li>
 				        </ul>
 				    </nav>
 				</div>
@@ -274,7 +274,7 @@
 							<div class="footer-column">
 								<h5 class="footer-column__title">ИНФОРМАЦИЯ</h5>
 								<ul class="footer-column__links">
-									<li><a href="#">КОНТАКТЫ</a></li>
+									<li><a href="contact.html">КОНТАКТЫ</a></li>
 									<li><a href="#">ИСТОРИЯ</a></li>
 									<li><a href="partners.html">ПАРТНЕРЫ</a></li>
 									<li><a href="#">ГЛАВНАЯ</a></li>
