--- a/TTC/partners.html
+++ b/TTC/partners.html
@@ -43,7 +43,7 @@
 					<nav id="my-menu">
 				        <ul>
 				        	<li><a href="index.html">ГЛАВНАЯ</a></li>
-				            <li><a href="#">ПЛЕДЫ</a></li>
+				            <li><a href="pledy.html">ПЛЕДЫ</a></li>
 				            <li><a href="#">ТКАНИ</a></li>
 				            <li><a href="#">ОДЕЯЛА</a></li>
 				            <li class="current-page"><a href="#">ПАРТНЕРЫ</a></li>
@@ -171,7 +171,7 @@
 							<div class="footer-column">
 								<h5 class="footer-column__title">ПРОДУКЦИЯ</h5>
 								<ul class="footer-column__links">
-									<li><a href="#">ПЛЕДЫ</a></li>
+									<li><a href="pledy.html">ПЛЕДЫ</a></li>
 									<li><a href="#">ТКАНИ </a></li>
 									<li><a href="#">ОДЕЯЛА</a></li>
 								</ul>
