--- a/TTC/cover.html
+++ b/TTC/cover.html
@@ -43,9 +43,9 @@
 					<nav id="my-menu">
 				        <ul>
 				        	<li><a href="index.html">ГЛАВНАЯ</a></li>
-				            <li class="current-page"><a href="#">ПЛЕДЫ</a></li>
+				            <li><a href="pledy.html">ПЛЕДЫ</a></li>
 				            <li><a href="#">ТКАНИ</a></li>
-				            <li><a href="#">ОДЕЯЛА</a></li>
+				            <li class="current-page"><a href="#">ОДЕЯЛА</a></li>
 				            <li><a href="partners.html">ПАРТНЕРЫ</a></li>
 				            <li><a href="about.html">О КОМПАНИИ</a></li>
 				            <li><a href="contact.html">КОНТАКТЫ</a></li>
@@ -83,64 +83,62 @@
 			<section class="mxw-1150 soft">
 				<!-- Section-title -->
 				<div class="section-title">
-					<h2>ПЛЕДЫ</h2>
+					<h2>ОДЕЯЛА</h2>
 				</div>
 				<!-- Card -->
 				<div class="card right">		
-					<img src="img/card15.png" class="card__img" alt="ШЕРСТЯНЫЕ">
+					<img src="img/card18.png" class="card__img" alt="ОДЕЯЛА">
 					<div class="card__content">
 						<h3 class="card__title emphasized">ШЕРСТЯНЫЕ</h3>
 						<br><br>
-						<p>Привлекательные шерстяные пледы, цена которых вполне доступна для каждого покупателя, станут отличным украшением вашего дома.</p>
+						<p>Шерстяные одеяла одни из лучших одеял,которые прекрасно берегут тепло тела, и именно поэтому под такими одеялами спать очень уютно и комфортно.</p>
 						<br>
-						<p><b>Состав:</b> 2 варианта:</p>
-						<p>100% шерсть</p>
-						<p>70% шерсть и 30% ПАН;</p>
+						<p><b>Состав:</b> 100% шерсть</p>
 						<br>
-						<p><b>Размер:</b> ширина от 130см до 150 см; длина с кистями от 180см до 200см</p>
+						<p><b>Размер:</b> ширина 140см ; длина 205 см (обшиты тесьмой)</p>
 						<br>
-						<p><b>Вес пледа:</b> от 700гр до 1500гр</p>
+						<p><b>Вес одеяла:</b> от 700гр до 1000гр</p>
 						<br>
-						<p><b>Рисунок:</b> Классическая клетка в мягких пастельных тонах (бежевый, коричневый, синий, красный, зеленый)</p>
+						<p><b>Рисунок:</b> Однотонные и Классическая клетка в мягких пастельных тонах (бежевый, коричневый, синий, красный, зеленый)</p>
 					</div>
 				</div>
-				<p class="section-text">Шерстяные пледы – самые теплые из всего разнообразия видов. И самые полезные. Все-таки натуральные ткани гораздо больше подходят к нашему телу, чем синтетика. Под пледом, изготовленным из верблюжьей или овечьей шерсти, кожа замечательно дышит. Натуральная шерсть не только великолепно удерживает тепло, но и нейтрализует отрицательные составляющие воздуха в помещении. Кроме того, шерсть может оказывать лечебное воздействие на человека. Так, считается, что она улучшает кровообращение, снижает боли в суставах. Единственный минус шерстяного пледа – более сложный, по сравнению с продукцией из других материалов, уход.</p>
+				<p class="section-text">Одеяла с открытой шерстью представляют собой изделия из из 100 % натуральной шерсти различных видов: верблюжья шерсть, шерсть ламы и кашмирских коз, овечья шерсть Одеяла из натуральной шерсти подарят Вам здоровый и спокойный сон круглый год. Шерстяное одеяло не собирает домашнюю пыль, в нем не появляются клещи, которые являются постоянными жителями пуховой и перьевой постели. Что не мало важно, шерстяная постель гипоаллергенна. Несомненным плюсом таких одеял является то, что они превосходно впитывают влагу, что, тем самым, улучшает микроклимат во время сна. Шерстяные одеяла замечательно подходят больным сахарным диабетом, костно-мышечными заболеваниями, сердечно-сосудистыми заболеваниями, а так же страдающим ночной потливостью.</p>
 				<!-- Card right -->
 				<div class="card">
-					<img src="img/card16.png" class="card__img" alt="ХЛОПЧАТОБУМАЖНЫЕ">
+					<img src="img/card19.png" class="card__img" alt="ХЛОПЧАТОБУМАЖНЫЕ">
 					<div class="card__content">
 						<h3 class="card__title emphasized">ХЛОПЧАТОБУМАЖНЫЕ</h3>
 						<br><br>
-						<p>Хлопчатобумажные пледы – летний вариант. Натуральные, мягкие, приятные к телу, экологически чистые, они замечательно согреют прохладным вечером.</p>
+						<p>Хлопок — натуральный материал, очень мягкий и пышный, из которого делаются недорогие и комфортные хлопчатобумажные одеяла. Хлопковые одеяла отлично греют и отводят излишки влаги.</p>
 						<br>
 						<p><b>Состав:</b> 100% х/б;</p>
 						<br>
-						<p><b>Размер:</b> ширина от 140см до 160 см; длина от 180см до 205см (без кистей, подшиты с двух сторон)</p>
+						<p><b>Размер:</b> ширина от 130см до 140см ; длина 205см (подшиты со всех сторон)</p>
 						<br>
 						<p><b>Вес пледа:</b> от 600 гр до 1200 гр</p>
 						<br>
 						<p><b>Рисунок:</b> Однотонные и в клетку в мягких тонах (белый, серый, бежевый, розовый)</p>
 					</div>
 				</div>
-				<p class="section-text">Хлопковые пледы – летний вариант. Натуральные, мягкие, приятные к телу, экологически чистые, они замечательно согреют прохладным вечером. Непритязательные расцветки материала органично впишутся в любой спокойный интерьер спальни или детской. Пожалуй, единственный их минус – по сравнению с пледами из других материалов - прослужат они не очень долго. Хлопковый плед может потерять свой внешний вид уже после нескольких стирок. Поэтому производители часто используют смешанный состав, сочетая в изделиях натуральный хлопок и искусственный акрил и увеличивая таким образом срок службы пледов.</p>
+				<p class="section-text">Под одеялом из хлопка очень приятно спать, так как оно невероятно уютное. Хлопковые одеяла безопасны для людей, подверженных аллергии. Еще один плюс одеял из хлопка — привлекательная цена. Хлопок — материал недорогой, к тому же большинство хлопковых одеял производится в Иваново, чья продукция всегда славилась доступностью и качеством. Детям наверняка понравится байковое одеяло — мягкое, невероятно приятное на ощупь полотно ткани. Для холодных зим есть очень тёплые ватные одеяла, под которыми можно пережить любую зиму в тепле и уюте. Под хлопковым одеялом вас ждёт здоровый, крепкий сон.</p>
 				<!-- Card -->
 				<div class="card right">
-					<img src="img/card17.png" class="card__img" alt="СИНТЕТИЧЕСКИЕ">
+					<img src="img/card20.png" class="card__img" alt="ЖАККАРДОВЫЕ">
 					<div class="card__content">
-						<h3 class="card__title emphasized">СИНТЕТИЧЕСКИЕ</h3>
+						<h3 class="card__title emphasized">ЖАККАРДОВЫЕ</h3>
 						<br><br>
-						<p>Основной отличительной чертой, которой обладают пледы синтетические, является невероятная насыщенность цветовой гаммы, яркость и контрастность рисунков, а также приятная легкость материалов.</p>
+						<p>Детские одеяла делаются из экологически чистых материалов, безопасных для здоровья ребенка. Очень популярны недорогие ватные одеяла.</p>
 						<br>
-						<p><b>Состав:</b> 2 варианта: 100% полиэфир и 100% акрил;</p>
+						<p><b>Состав:</b> 50% шерсть 50% акрил</p>
 						<br>
-						<p><b>Размер:</b> ширина от 140см до 150 см; длина с кистями от 180см до 205см (длина кистей по 10см с каждой стороны)</p>
+						<p><b>Размер:</b> ширина от 100см до 110см ; длина 140см (подшиты со всех сторон)</p>
 						<br>
-						<p><b>Вес пледа:</b> от 300 гр до 700 гр</p>
+						<p><b>Вес пледа:</b> 600 гр</p>
 						<br>
-						<p><b>Рисунок:</b> Классическая клетка в ярких тонах (серый, бежевый, синий, красный, зеленый, белый)</p>
+						<p><b>Рисунок:</b> Детский рисунок по всему одеялу (белый, серый, бежевый, розовый)</p>
 					</div>
 				</div>
-				<p class="section-text">Флисовые пледы наиболее распространены среди любителей активного отдыха и частых вылазок на природу. В основе – синтетический материал полиэстер. Он долговечен, замечательно стирается, очень быстро сохнет и даже длительное использование практически не сказывается на внешнем виде. Разнообразные расцветки позволяют выбрать плед, исходя из эстетических соображений, как правило, это детские пледы. Еще к плюсам флисовых пледов можно добавить легкость, компактность, хорошую теплоизоляцию, водоотталкивание и одновременно с этим отличную циркуляцию воздуха. Из минусов же, пожалуй, только их синтетичность.</p>
+				<p class="section-text">Пользуется стабильным спросом мягкое и уютное байковое одеяло из хлопка. Одеяло из овечьей шерсти обладает полезными свойствами — отводит влагу, сохраняет тепло. Бамбуковые одеяла содержат природные антисептики. Синтетические детские одеяла отличаются практичностью и доступной ценой. Шёлковые одеяла для детей можно использовать и для новорожденных — шёлк это материал без отрицательных свойств и недостатков. Одним словом, есть из чего выбрать лучшее одеяло для ребенка. Есть тёплые и прохладные, пышные и тоненькие, натуральные и искусственные детские одеяла для любого климата и времени года. Определиться с выбором помогут информативные фотографии и подробные описания. Детские одеяла сделаны для того, чтобы сон вашего ребенка был здоровым и крепким!</p>
 			</section>
 			<!--! Feedback -->
 			<section class="feedback">
@@ -212,7 +210,7 @@
 									<li><a href="contact.html">КОНТАКТЫ</a></li>
 									<li><a href="#">ИСТОРИЯ</a></li>
 									<li><a href="partners.html">ПАРТНЕРЫ</a></li>
-									<li><a href="index.html">ГЛАВНАЯ</a></li>
+									<li><a href="#">ГЛАВНАЯ</a></li>
 								</ul>
 							</div>
 						</nav>
