--- a/TTC/about.html
+++ b/TTC/about.html
@@ -45,7 +45,7 @@
 				        	<li><a href="index.html">ГЛАВНАЯ</a></li>
 				            <li><a href="pledy.html">ПЛЕДЫ</a></li>
 				            <li><a href="#">ТКАНИ</a></li>
-				            <li><a href="#">ОДЕЯЛА</a></li>
+				            <li><a href="cover.html">ОДЕЯЛА</a></li>
 				            <li><a href="partners.html">ПАРТНЕРЫ</a></li>
 				            <li class="current-page"><a href="#">О КОМПАНИИ</a></li>
 				            <li><a href="contact.html">КОНТАКТЫ</a></li>
@@ -159,7 +159,7 @@
 								<ul class="footer-column__links">
 									<li><a href="pledy.html">ПЛЕДЫ</a></li>
 									<li><a href="#">ТКАНИ </a></li>
-									<li><a href="#">ОДЕЯЛА</a></li>
+									<li><a href="cover.html">ОДЕЯЛА</a></li>
 								</ul>
 							</div>
 							<div class="footer-column">
