--- a/TTC/contact.html
+++ b/TTC/contact.html
@@ -45,7 +45,7 @@
 				        	<li><a href="index.html">ГЛАВНАЯ</a></li>
 				            <li><a href="pledy.html">ПЛЕДЫ</a></li>
 				            <li><a href="#">ТКАНИ</a></li>
-				            <li><a href="#">ОДЕЯЛА</a></li>
+				            <li><a href="cover.html">ОДЕЯЛА</a></li>
 				            <li><a href="partners.html">ПАРТНЕРЫ</a></li>
 				            <li><a href="about.html">О КОМПАНИИ</a></li>
 				            <li class="current-page"><a href="#">КОНТАКТЫ</a></li>
@@ -180,7 +180,7 @@
 								<ul class="footer-column__links">
 									<li><a href="pledy.html">ПЛЕДЫ</a></li>
 									<li><a href="#">ТКАНИ </a></li>
-									<li><a href="#">ОДЕЯЛА</a></li>
+									<li><a href="cover.html">ОДЕЯЛА</a></li>
 								</ul>
 							</div>
 							<div class="footer-column">
@@ -189,7 +189,7 @@
 									<li><a href="#">КОНТАКТЫ</a></li>
 									<li><a href="#">ИСТОРИЯ</a></li>
 									<li><a href="partners.html">ПАРТНЕРЫ</a></li>
-									<li><a href="#">ГЛАВНАЯ</a></li>
+									<li><a href="index.html">ГЛАВНАЯ</a></li>
 								</ul>
 							</div>
 						</nav>
