--- a/TTC/index.html
+++ b/TTC/index.html
@@ -45,7 +45,7 @@
 				        	<li class="current-page"><a href="index.html">ГЛАВНАЯ</a></li>
 				            <li><a href="pledy.html">ПЛЕДЫ</a></li>
 				            <li><a href="#">ТКАНИ</a></li>
-				            <li><a href="#">ОДЕЯЛА</a></li>
+				            <li><a href="cover.html">ОДЕЯЛА</a></li>
 				            <li><a href="partners.html">ПАРТНЕРЫ</a></li>
 				            <li><a href="about.html">О КОМПАНИИ</a></li>
 				            <li><a href="contact.html">КОНТАКТЫ</a></li>
@@ -268,7 +268,7 @@
 								<ul class="footer-column__links">
 									<li><a href="pledy.html">ПЛЕДЫ</a></li>
 									<li><a href="#">ТКАНИ </a></li>
-									<li><a href="#">ОДЕЯЛА</a></li>
+									<li><a href="cover.html">ОДЕЯЛА</a></li>
 								</ul>
 							</div>
 							<div class="footer-column">
