--- a/TTC/partners.html
+++ b/TTC/partners.html
@@ -45,7 +45,7 @@
 				        	<li><a href="index.html">ГЛАВНАЯ</a></li>
 				            <li><a href="pledy.html">ПЛЕДЫ</a></li>
 				            <li><a href="#">ТКАНИ</a></li>
-				            <li><a href="#">ОДЕЯЛА</a></li>
+				            <li><a href="cover.html">ОДЕЯЛА</a></li>
 				            <li class="current-page"><a href="#">ПАРТНЕРЫ</a></li>
 				            <li><a href="about.html">О КОМПАНИИ</a></li>
 				            <li><a href="contact.html">КОНТАКТЫ</a></li>
@@ -173,7 +173,7 @@
 								<ul class="footer-column__links">
 									<li><a href="pledy.html">ПЛЕДЫ</a></li>
 									<li><a href="#">ТКАНИ </a></li>
-									<li><a href="#">ОДЕЯЛА</a></li>
+									<li><a href="cover.html">ОДЕЯЛА</a></li>
 								</ul>
 							</div>
 							<div class="footer-column">
@@ -182,7 +182,7 @@
 									<li><a href="contact.html">КОНТАКТЫ</a></li>
 									<li><a href="#">ИСТОРИЯ</a></li>
 									<li><a href="#">ПАРТНЕРЫ</a></li>
-									<li><a href="#">ГЛАВНАЯ</a></li>
+									<li><a href="index.html">ГЛАВНАЯ</a></li>
 								</ul>
 							</div>
 						</nav>
