--- a/TTC/pledy.html
+++ b/TTC/pledy.html
@@ -23,7 +23,7 @@
 		<header class="header static-header">
 			<div class="container">
 				<div class="header__body row justify-content-between align-items-center">
-					<a href="#" class="logo">
+					<a href="index.html" class="logo">
 						<img src="img/logo.png" alt="Лого">
 						<div class="logo__content">
 							<span class="logo__text1">КУПАВИНСКАЯ</span>
