--- a/TTC/about.html
+++ b/TTC/about.html
@@ -44,7 +44,7 @@
 				        <ul>
 				        	<li><a href="index.html">ГЛАВНАЯ</a></li>
 				            <li><a href="pledy.html">ПЛЕДЫ</a></li>
-				            <li><a href="#">ТКАНИ</a></li>
+				            <li><a href="tkani.html">ТКАНИ</a></li>
 				            <li><a href="cover.html">ОДЕЯЛА</a></li>
 				            <li><a href="partners.html">ПАРТНЕРЫ</a></li>
 				            <li class="current-page"><a href="#">О КОМПАНИИ</a></li>
@@ -158,7 +158,7 @@
 								<h5 class="footer-column__title">ПРОДУКЦИЯ</h5>
 								<ul class="footer-column__links">
 									<li><a href="pledy.html">ПЛЕДЫ</a></li>
-									<li><a href="#">ТКАНИ </a></li>
+									<li><a href="tkani.html">ТКАНИ </a></li>
 									<li><a href="cover.html">ОДЕЯЛА</a></li>
 								</ul>
 							</div>
