--- a/TTC/pledy.html
+++ b/TTC/pledy.html
@@ -44,7 +44,7 @@
 				        <ul>
 				        	<li><a href="index.html">ГЛАВНАЯ</a></li>
 				            <li class="current-page"><a href="#">ПЛЕДЫ</a></li>
-				            <li><a href="#">ТКАНИ</a></li>
+				            <li><a href="tkani.html">ТКАНИ</a></li>
 				            <li><a href="#">ОДЕЯЛА</a></li>
 				            <li><a href="partners.html">ПАРТНЕРЫ</a></li>
 				            <li><a href="about.html">О КОМПАНИИ</a></li>
@@ -202,7 +202,7 @@
 								<h5 class="footer-column__title">ПРОДУКЦИЯ</h5>
 								<ul class="footer-column__links">
 									<li><a href="#">ПЛЕДЫ</a></li>
-									<li><a href="#">ТКАНИ </a></li>
+									<li><a href="tkani.html">ТКАНИ </a></li>
 									<li><a href="#">ОДЕЯЛА</a></li>
 								</ul>
 							</div>
