--- a/TTC/tkani.html
+++ b/TTC/tkani.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>КУПАВИНСКАЯ ТЕКСТИЛЬНАЯ КОМПАНИЯ | Партнеры</title>
+	<title>КУПАВИНСКАЯ ТЕКСТИЛЬНАЯ КОМПАНИЯ | Ткани</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -23,7 +23,7 @@
 		<header class="header static-header">
 			<div class="container">
 				<div class="header__body row justify-content-between align-items-center">
-					<a href="index.html" class="logo">
+					<a href="#" class="logo">
 						<img src="img/logo.png" alt="Лого">
 						<div class="logo__content">
 							<span class="logo__text1">КУПАВИНСКАЯ</span>
@@ -44,9 +44,9 @@
 				        <ul>
 				        	<li><a href="index.html">ГЛАВНАЯ</a></li>
 				            <li><a href="pledy.html">ПЛЕДЫ</a></li>
-				            <li><a href="tkani.html">ТКАНИ</a></li>
+				            <li class="current-page"><a href="#">ТКАНИ</a></li>
 				            <li><a href="cover.html">ОДЕЯЛА</a></li>
-				            <li class="current-page"><a href="#">ПАРТНЕРЫ</a></li>
+				            <li><a href="partners.html">ПАРТНЕРЫ</a></li>
 				            <li><a href="about.html">О КОМПАНИИ</a></li>
 				            <li><a href="contact.html">КОНТАКТЫ</a></li>
 				        </ul>
@@ -58,7 +58,7 @@
 		<header class="header fixed-for-menu">
 			<div class="container">
 				<div class="header__body row justify-content-between align-items-center">
-					<a href="index.html" class="logo">
+					<a href="#" class="logo">
 						<img src="img/logo.png" alt="Лого">
 						<div class="logo__content">
 							<span class="logo__text1">КУПАВИНСКАЯ</span>
@@ -79,39 +79,22 @@
 		</header>
 		<!-- Container -->
 		<div class="container">
-			<!--! Partners -->
-			<section class="partners mxw-1150">
+			<!-- Clothes -->
+			<section class="clothes">
 				<!-- Section-title -->
 				<div class="section-title">
-					<h2>ПАРТНЕРЫ</h2>
+					<h2>ТКАНИ</h2>
 				</div>
-				<!-- Card -->
-				<div class="card">		
-					<img src="img/card11.png" class="card__img" alt="«Ермолино» логотип">
-					<div class="card__content">
-						<p class="center-text">
-							<strong>ООО «Ермолино» — изделия из 100% хлопковой пряжи на рынок текстильной промышленности.</strong>
-						</p>
-					</div>
-				</div>
-				<p class="section-text">Наши товары — это не только оригинальный дизайн и внимание к новейшим тенденциям моды, но и экологическая чистота изделий и отсутствие вредных примесей. Продукция «Ермолино» прошла проверку Роспотребнадзора и соответствует всем необходимым требованиям ГОСТ.
 				<br><br>
-				Официальный сайт: <a href="https://www.ermolino.ru">https://www.ermolino.ru</a></p>
-				<!-- Card -->
-				<div class="card">
-					<img src="img/card12.png" class="card__img" alt="ТКАНИ">
-					<div class="card__content">
-						<p class="center-text">
-							<strong>МТОК – Московская фабрика гобеленов</strong>
-						</p>
-					</div>
+				<div class="row">
+					<div class="col-md-4 col-sm-6 col-12 cloth" style="background-image: url('img/cloth1.png')"></div>
+					<div class="col-md-4 col-sm-6 col-12 cloth" style="background-image: url('img/cloth2.png')"></div>
+					<div class="col-md-4 col-sm-6 col-12 cloth" style="background-image: url('img/cloth3.png')"></div>
+					<div class="col-md-4 col-sm-6 col-12 cloth" style="background-image: url('img/cloth4.png')"></div>
+					<div class="col-md-4 col-sm-6 col-12 cloth" style="background-image: url('img/cloth5.png')"></div>
+					<div class="col-md-4 col-sm-6 col-12 cloth" style="background-image: url('img/cloth6.png')"></div>
 				</div>
-				<p class="section-text">
-					Московский ткацко-отделочный комбинат – это крупная российская фабрика по производству гобеленовых и жаккардовых тканей и готовых швейных изделий. 
-					<br><br>
-					Официальный сайт: <a href="https://www.gobelen-mtok.ru">https://www.gobelen-mtok.ru</a>
-				</p>
-			</section>
+			</section>			
 			<!--! Feedback -->
 			<section class="feedback">
 				<!-- Section-title -->
@@ -172,7 +155,7 @@
 								<h5 class="footer-column__title">ПРОДУКЦИЯ</h5>
 								<ul class="footer-column__links">
 									<li><a href="pledy.html">ПЛЕДЫ</a></li>
-									<li><a href="tkani.html">ТКАНИ </a></li>
+									<li><a href="#">ТКАНИ </a></li>
 									<li><a href="cover.html">ОДЕЯЛА</a></li>
 								</ul>
 							</div>
@@ -181,8 +164,8 @@
 								<ul class="footer-column__links">
 									<li><a href="contact.html">КОНТАКТЫ</a></li>
 									<li><a href="#">ИСТОРИЯ</a></li>
-									<li><a href="#">ПАРТНЕРЫ</a></li>
-									<li><a href="index.html">ГЛАВНАЯ</a></li>
+									<li><a href="partners.html">ПАРТНЕРЫ</a></li>
+									<li><a href="#">ГЛАВНАЯ</a></li>
 								</ul>
 							</div>
 						</nav>
