--- a/Paulls/niinm.html
+++ b/Paulls/niinm.html
@@ -25,7 +25,7 @@
 		<div class="container">
 			<div class="row justify-content-between">
 				<a href="matrice.html" class="case-pagination__prev case-pagination__link">НАЗАД</a>
-				<a href="sembuketov.html" class="case-pagination__next case-pagination__link">ДАЛЕЕ</a>
+				<a href="skinhappines.html" class="case-pagination__next case-pagination__link">ДАЛЕЕ</a>
 			</div>
 		</div>
 	</div>
