--- a/Diaz/index.html
+++ b/Diaz/index.html
@@ -177,7 +177,7 @@
 				<!-- Video -->
 				<div class="col-xl-12">
 					<div class="video-container">
-						<span>Видео</span>
+						<iframe width="958" height="539" src="https://www.youtube.com/embed/MqBfAvScyds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 				
