--- a/Diaz/index.html
+++ b/Diaz/index.html
@@ -177,7 +177,7 @@
 				<!-- Video -->
 				<div class="col-xl-12">
 					<div class="video-container">
-						<iframe width="1280" height="539" src="https://www.youtube.com/embed/MqBfAvScyds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe width="1090" height="539" src="https://www.youtube.com/embed/MqBfAvScyds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 				
@@ -207,6 +207,168 @@
 			</div>
 		</div>
 	</section>
+
+	<!--! Price -->
+	<section class="price section-pd bg-light-blue">
+		<div class="container">
+			<h2 class="section-title">Стоимость</h2>
+			<div class="section__row price-slider">
+				<div class="price-slider__slide">
+					<h3>ХУДОЖНИК ПРОФИ</h3>
+
+					<div class="content">
+						<p>2 модуля обучения</p>
+						<p><i class="fas fa-check"></i></p>
+						<p>1 групповой и персональный вебинар для ответов на вопросы</p>
+						<p><i class="fas fa-check"></i></p>
+						<p>куратор по домашке и портфолио</p>
+						<p><i class="fas fa-check"></i></p>
+						<p>продолжительность: 2 месяца</p>
+					</div>
+
+					<div class="price-text">
+						<b>190$</b> /курс
+					</div>
+
+					<a href="#" class="blue-btn">ОПЛАТИТЬ</a>
+				</div>
+
+				<div class="price-slider__slide">
+					<h3>ПРОФИ С ГАРАНТИЕЙ ЗАКАЗА</h3>
+
+					<div class="content">
+						<p>гарантирован 1 заказ</p>
+						<p><i class="fas fa-check"></i></p>
+						<p>возможность лично  звонить продюсеру</p>
+						<p><i class="fas fa-check"></i></p>
+						<p>оформляем портфолио</p>
+						<p><i class="fas fa-check"></i></p>
+						<p>продолжительность: 3 месяца</p>
+					</div>
+
+					<div class="price-text">
+						<b>1550$</b> /курс
+					</div>
+
+					<a href="#" class="blue-btn">ОПЛАТИТЬ</a>
+				</div>
+
+				<div class="price-slider__slide">
+					<h3>VIP-ПРОФЕССИОНАЛ</h3>
+
+					<div class="content">
+						<p>куратор по домашке и портфолио</p>
+						<p><i class="fas fa-check"></i></p>
+						<p>возможность лично звонить продюсеру</p>
+						<p><i class="fas fa-check"></i></p>
+						<p>формируем команду для самостоятельной работы</p>
+						<p><i class="fas fa-check"></i></p>
+						<p>продолжительность: от 3 месяцев</p>
+					</div>
+
+					<div class="price-text">
+						<b>4160$</b> /курс
+					</div>
+
+					<a href="#" class="blue-btn">ОПЛАТИТЬ</a>
+				</div>
+
+				<div class="price-slider__slide">
+					<h3>ХУДОЖНИК ЛЮБИТЕЛЬ</h3>
+
+					<div class="content">
+						<p>1 модуль обучения</p>
+						<p><i class="fas fa-check"></i></p>
+						<p>1 групповой для ответов на вопросы</p>
+						<p><i class="fas fa-check"></i></p>
+						<p>куратор по домашке</p>
+						<p><i class="fas fa-check"></i></p>
+						<p>продолжительность: 2 недели</p>
+					</div>
+
+					<div class="price-text">
+						<b>45$</b> /курс
+					</div>
+
+					<a href="#" class="blue-btn">ОПЛАТИТЬ</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!--! Partners -->
+	<section class="partners section-pd">
+		<div class="container">
+			<h2 class="section-title">МЫ РИСОВАЛИ ДЛЯ ЛУЧШИХ</h2>
+			<div class="partners-slider section__row">
+				<div class="partners-slider__slide">
+					<img src="img/partners1.png" alt="">
+				</div>
+				<!-- <div class="partners-slider__slide">
+					<img src="img/partners2.png" alt="">
+				</div>
+				<div class="partners-slider__slide">
+					<img src="img/partners3.png" alt="">
+				</div>
+				<div class="partners-slider__slide">
+					<img src="img/partners4.png" alt="">
+				</div> -->
+				<div class="partners-slider__slide">
+					<img src="img/partners5.png" alt="">
+				</div>
+				<div class="partners-slider__slide">
+					<img src="img/partners6.png" alt="">
+				</div>
+				<div class="partners-slider__slide">
+					<img src="img/partners7.png" alt="">
+				</div>
+				<div class="partners-slider__slide">
+					<img src="img/partners8.png" alt="">
+				</div>
+				<div class="partners-slider__slide">
+					<img src="img/partners9.png" alt="">
+				</div>
+				<div class="partners-slider__slide">
+					<img src="img/partners10.png" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!--! Projects -->
+	<section class="projects section-pd">
+		<div class="container">
+			<h2 class="section-title">Наши Проекты</h2>
+			<div class="projects__row section__row">
+				<div class="project" style="background-image: url('img/project1.png');"></div>
+				<div class="project" style="background-image: url('img/project2.png');"></div>
+				<div class="project" style="background-image: url('img/project3.png');"></div>
+				<div class="project" style="background-image: url('img/project4.png');"></div>
+				<div class="project" style="background-image: url('img/project5.png');"></div>
+				<div class="project" style="background-image: url('img/project6.png');"></div>
+			</div>
+		</div>
+	</section>
+
+	<!--! Footer -->
+	<footer>
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col-md-3 footer-logo">
+					<img src="img/logo.png" alt="Logo">
+				</div>
+				<div class="col-md-4 links">
+					<a href="#">Отказ от ответственности</a>
+					<a href="#">Партнерская программа</a>
+					<a href="#">Согласие на рассылку писем</a>
+				</div>
+				<div class="col-md-5 links">
+					<a href="#">Договор оферты</a>
+					<a href="#">Заказать шоу песочной анимации</a>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<!-- Scripts -->
 	<script src="js/scripts.min.js"></script>
 </body>
