--- a/Diaz/index.html
+++ b/Diaz/index.html
@@ -47,7 +47,7 @@
 					<p class="little">
 						<b>*Необходимы минимальный уровень <br>	умения рисовать</b>
 					</p>
-					<a href="#" class="start-banner__btn blue-btn">ВЫБРАТЬ ПАКЕТ <i class="fas fa-angle-right"></i></a>
+					<a href="#price-section" class="start-banner__btn blue-btn">ВЫБРАТЬ ПАКЕТ <i class="fas fa-angle-right"></i></a>
 				</div>
 				<div class="col-xl-4 start-banner__img-container">
 					<img src="img/founder.png" alt="Head" class="start-banner__img">
@@ -209,7 +209,7 @@
 	</section>
 
 	<!--! Price -->
-	<section class="price section-pd bg-light-blue">
+	<section class="price section-pd bg-light-blue" id="price-section">
 		<div class="container">
 			<h2 class="section-title">Стоимость</h2>
 			<div class="section__row price-slider">
