--- a/Diaz/index.html
+++ b/Diaz/index.html
@@ -31,7 +31,7 @@
 						<i class="fas fa-phone-alt"></i>
 						<span>+380 99 423 43 74</span>
 					</div>
-					<a href="#" class="light-btn">Заказать звонок</a>
+					<a href="#" class="light-btn">Задать вопрос</a>
 				</div>
 			</div>
 		</div>
